# autonomous-ci-agent

./: .gitignore  README.md  main.py  requirements.txt
agent/: docker_runner.py  fixer.py  git_ops.py  log_parser.py  pipeline.py  retry.py
docker/: Dockerfile
examples/calc_app/logic/: calc.py  calc_2.py
examples/calc_app/tests/: test_calc.py  test_calc_2.py
examples/cpp_calc/: CMakeLists.txt
examples/cpp_calc/logic/: calc.cpp  calc.h
examples/cpp_calc/tests/: test_calc.cpp
protocol/: pipeline_result.json
settings/: settings.json
tests/: test_docker_runner.py  test_git_ops.py  test_log_parser.py  test_retry_policy.py
